==> particle-iot/device-os/hal/src/stm32f2xx/sleep_hal.cpp <==
#include "sleep_hal.h"
#include <malloc.h>
#include "stm32f2xx.h"
#include "gpio_hal.h"
#include "pwm_hal.h"
#include "i2c_hal.h"
#include "spi_hal.h"
#include "adc_hal.h"
#include "rtc_hal.h"
#include "usb_hal.h"
#include "usart_hal.h"
#include "interrupts_hal.h"
#include "check.h"

static int configGpioWakeupSource(const hal_wakeup_source_base_t* wakeupSources) {
    auto source = wakeupSources;
    while (source) {
        if (source->type == HAL_WAKEUP_SOURCE_TYPE_GPIO) {
            auto gpioWakeup = reinterpret_cast<const hal_wakeup_source_gpio_t*>(source);
            PinMode wakeUpPinMode = INPUT;
            /* Set required pinMode based on edgeTriggerMode */
            switch(gpioWakeup->mode) {
                case RISING: {
                    wakeUpPinMode = INPUT_PULLDOWN;
                    break;
                }
                case FALLING: {
                    wakeUpPinMode = INPUT_PULLUP;
                    break;
                }
                case CHANGE:
                default: {
                    wakeUpPinMode = INPUT;
                    break;
                }
            }
            HAL_Pin_Mode(gpioWakeup->pin, wakeUpPinMode);
            HAL_InterruptExtraConfiguration irqConf = {0};
            irqConf.version = HAL_INTERRUPT_EXTRA_CONFIGURATION_VERSION_2;
            irqConf.IRQChannelPreemptionPriority = 0;
            irqConf.IRQChannelSubPriority = 0;
            irqConf.keepHandler = 1;
            irqConf.keepPriority = 1;
            HAL_Interrupts_Attach(gpioWakeup->pin, nullptr, nullptr, gpioWakeup->mode, &irqConf);
        }
        source = source->next;
    }
    return SYSTEM_ERROR_NONE;
}

static int configRtcWakeupSource(const hal_wakeup_source_base_t* wakeupSources) {
    auto source = wakeupSources;
    while (source) {
        if (source->type == HAL_WAKEUP_SOURCE_TYPE_RTC) {
            auto rtcWakeup = reinterpret_cast<const hal_wakeup_source_rtc_t*>(source);
            long seconds = rtcWakeup->ms / 1000;

            /*
             * - To wake up from the Stop mode with an RTC alarm event, it is necessary to:
             * - Configure the EXTI Line 17 to be sensitive to rising edges (Interrupt
             * or Event modes) using the EXTI_Init() function.
             *
             */
            hal_rtc_cancel_alarm();

            // Connect RTC to EXTI line
            EXTI_InitTypeDef extiInitStructure = {0};
            extiInitStructure.EXTI_Line = EXTI_Line17;
            extiInitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
            extiInitStructure.EXTI_Trigger = EXTI_Trigger_Rising;
            extiInitStructure.EXTI_LineCmd = ENABLE;
            EXTI_Init(&extiInitStructure);

            struct timeval tv = {
                .tv_sec = seconds,
                .tv_usec = 0
            };
            CHECK(hal_rtc_set_alarm(&tv, HAL_RTC_ALARM_FLAG_IN, nullptr, nullptr, nullptr));
        }
        source = source->next;
    }
    return SYSTEM_ERROR_NONE;
}

static int enterHibernateMode(const hal_sleep_config_t* config, hal_wakeup_source_base_t** wakeup_source) {
    bool enableWkpPin = false;
    auto wakeupSource = config->wakeup_sources;
    while (wakeupSource) {
        if (wakeupSource->type == HAL_WAKEUP_SOURCE_TYPE_RTC) {
            long seconds = reinterpret_cast<hal_wakeup_source_rtc_t*>(wakeupSource)->ms / 1000;

            struct timeval tv = {
                .tv_sec = seconds,
                .tv_usec = 0
            };
            hal_rtc_cancel_alarm();
            CHECK(hal_rtc_set_alarm(&tv, HAL_RTC_ALARM_FLAG_IN, nullptr, nullptr, nullptr));
        } else if (wakeupSource->type == HAL_WAKEUP_SOURCE_TYPE_GPIO) {
            enableWkpPin = true;
        }
        wakeupSource = wakeupSource->next;
    }

    if (enableWkpPin) {
        /* Enable WKUP pin */
        PWR_WakeUpPinCmd(ENABLE);
    } else {
        /* Disable WKUP pin */
        PWR_WakeUpPinCmd(DISABLE);
    }

    /* Request to enter STANDBY mode */
    PWR_EnterSTANDBYMode();

    /* Following code will not be reached */
    while(1);

    return SYSTEM_ERROR_NONE;
}
