==> particle-iot/device-os/hal/src/nRF52840/sleep_hal.cpp <==
#include "nrf_uarte.h"
#include "sleep_hal.h"
#include <malloc.h>
#include <nrfx_types.h>
#include <nrf_mbr.h>
#include <nrf_sdm.h>
#include <nrf_sdh.h>
#include <nrf_rtc.h>
#include <nrf_lpcomp.h>
#include <nrfx_gpiote.h>
#include <nrf_drv_clock.h>
#include <nrf_pwm.h>
#include "gpio_hal.h"
#include "usb_hal.h"
#include "usart_hal.h"
#include "i2c_hal.h"
#include "spi_hal.h"
#include "adc_hal.h"
#include "pwm_hal.h"
#include "flash_common.h"
#include "exflash_hal.h"
#include "rtc_hal.h"
#include "timer_hal.h"
#include "ble_hal.h"
#include "interrupts_hal.h"
#include "concurrent_hal.h"
#include "check.h"
#include "radio_common.h"
#include "exrtc_hal.h"
#include "spark_wiring_vector.h"
#include "platform_ncp.h"
#include "mcp23s17.h"

static void configGpioWakeupSource(const hal_wakeup_source_base_t* wakeupSources) {
    uint32_t gpioIntenSet = 0;
    hal_pin_info_t* halPinMap = hal_pin_map();

#if HAL_PLATFORM_IO_EXTENSION && MODULE_FUNCTION != MOD_FUNC_BOOTLOADER
#if HAL_PLATFORM_MCP23S17
    bool ioExpanderIntConfigured = false;
#endif
#endif

    auto source = wakeupSources;
    while (source) {
        if (source->type == HAL_WAKEUP_SOURCE_TYPE_GPIO) {
            nrf_gpio_pin_pull_t wakeupPinMode;
            nrf_gpio_pin_sense_t wakeupPinSense;
            nrf_gpiote_polarity_t wakeupPinPolarity;
            uint32_t nrfPin;
            auto gpioWakeup = reinterpret_cast<const hal_wakeup_source_gpio_t*>(source);
#if HAL_PLATFORM_IO_EXTENSION && MODULE_FUNCTION != MOD_FUNC_BOOTLOADER
            if (halPinMap[gpioWakeup->pin].type == HAL_PIN_TYPE_MCU) {
#endif
                switch(gpioWakeup->mode) {
                    case RISING: {
                        wakeupPinMode = NRF_GPIO_PIN_PULLDOWN;
                        wakeupPinSense = NRF_GPIO_PIN_SENSE_HIGH;
                        wakeupPinPolarity = NRF_GPIOTE_POLARITY_LOTOHI;
                        break;
                    }
                    case FALLING: {
                        wakeupPinMode = NRF_GPIO_PIN_PULLUP;
                        wakeupPinSense = NRF_GPIO_PIN_SENSE_LOW;
                        wakeupPinPolarity = NRF_GPIOTE_POLARITY_HITOLO;
                        break;
                    }
                    case CHANGE:
                    default: {
                        wakeupPinMode = NRF_GPIO_PIN_NOPULL;
                        wakeupPinPolarity = NRF_GPIOTE_POLARITY_TOGGLE;
                        break;
                    }
                }
                // For any pin that is not currently configured in GPIOTE with IN event
                // we are going to use low power PORT events
                nrfPin = NRF_GPIO_PIN_MAP(halPinMap[gpioWakeup->pin].gpio_port, halPinMap[gpioWakeup->pin].gpio_pin);
#if HAL_PLATFORM_IO_EXTENSION && MODULE_FUNCTION != MOD_FUNC_BOOTLOADER
            }
#if HAL_PLATFORM_MCP23S17
            else if (halPinMap[gpioWakeup->pin].type == HAL_PIN_TYPE_IO_EXPANDER && !ioExpanderIntConfigured) {
                ioExpanderIntConfigured = true;
                wakeupPinMode = NRF_GPIO_PIN_PULLUP;
                wakeupPinSense = NRF_GPIO_PIN_SENSE_LOW;
                wakeupPinPolarity = NRF_GPIOTE_POLARITY_HITOLO;
                nrfPin = NRF_GPIO_PIN_MAP(halPinMap[IOE_INT].gpio_port, halPinMap[IOE_INT].gpio_pin);
            }
#endif
            else {
                source = source->next;
                continue;
            }
#endif
            // Set pin mode
            nrf_gpio_cfg_input(nrfPin, wakeupPinMode);
            bool usePortEvent = true;
            for (unsigned i = 0; i < GPIOTE_CH_NUM; ++i) {
                if ((nrf_gpiote_event_pin_get(i) == nrfPin) && nrf_gpiote_int_is_enabled(NRF_GPIOTE_INT_IN0_MASK << i)) {
                    // We have to use IN event for this pin in order to successfully execute interrupt handler
                    usePortEvent = false;
                    nrf_gpiote_event_configure(i, nrfPin, wakeupPinPolarity);
                    gpioIntenSet |= NRF_GPIOTE_INT_IN0_MASK << i;
                    break;
                }
            }
            if (usePortEvent) {
                // Use PORT for this pin
                if (wakeupPinMode == NRF_GPIO_PIN_NOPULL) {
                    // Read current state, choose sense accordingly
                    // Dummy read just in case
                    (void)nrf_gpio_pin_read(nrfPin);
                    uint32_t cur_state = nrf_gpio_pin_read(nrfPin);
                    if (cur_state) {
                        nrf_gpio_cfg_sense_set(nrfPin, NRF_GPIO_PIN_SENSE_LOW);
                    } else {
                        nrf_gpio_cfg_sense_set(nrfPin, NRF_GPIO_PIN_SENSE_HIGH);
                    }
                } else {
                    nrf_gpio_cfg_sense_input(nrfPin, wakeupPinMode, wakeupPinSense);
                }
                gpioIntenSet |= NRF_GPIOTE_INT_PORT_MASK;
            }
        }
        source = source->next;
    }
    
    if (gpioIntenSet > 0) {
        uint32_t curIntenSet = NRF_GPIOTE->INTENSET;
        nrf_gpiote_int_disable(curIntenSet);

        // Clear events and interrupts
        uint32_t ioeNrfPin = 0xFFFFFFFF;
#if HAL_PLATFORM_IO_EXTENSION && MODULE_FUNCTION != MOD_FUNC_BOOTLOADER
#if HAL_PLATFORM_MCP23S17
        /* The GPIOTE event associated with IOE_INT is probably set after we configured
           the IO expander interrupts. Do not clear it and use it to wake up device.
           Otherwise, we will miss the interrupt triggered by IO expander. */
        ioeNrfPin = NRF_GPIO_PIN_MAP(halPinMap[IOE_INT].gpio_port, halPinMap[IOE_INT].gpio_pin);
#endif
#endif
        for (uint8_t i = 0; i < GPIOTE_CH_NUM; i++) {
            if (nrf_gpiote_event_pin_get(i) != ioeNrfPin) {
                nrf_gpiote_event_clear(gpioteEvents[i]);
            }
        }
        nrf_gpiote_event_clear(NRF_GPIOTE_EVENTS_PORT);
        NVIC_ClearPendingIRQ(GPIOTE_IRQn);
        nrf_gpiote_int_enable(gpioIntenSet);
        NVIC_EnableIRQ(GPIOTE_IRQn);
    }
}

static void configRtcWakeupSource(const hal_wakeup_source_base_t* wakeupSources) {
    auto source = wakeupSources;
    while (source) {
        if (source->type == HAL_WAKEUP_SOURCE_TYPE_RTC) {
            auto rtcWakeup = reinterpret_cast<const hal_wakeup_source_rtc_t*>(source);
            uint32_t ticks = rtcWakeup->ms / 125;
            // Reconfigure RTC2 for wake-up
            NVIC_ClearPendingIRQ(RTC2_IRQn);

            nrf_rtc_event_disable(NRF_RTC2, RTC_EVTEN_TICK_Msk);
            nrf_rtc_event_clear(NRF_RTC2, NRF_RTC_EVENT_TICK);

            nrf_rtc_event_clear(NRF_RTC2, NRF_RTC_EVENT_COMPARE_0);
            nrf_rtc_event_disable(NRF_RTC2, RTC_EVTEN_COMPARE0_Msk);

            // Configure CC0
            uint32_t counter = nrf_rtc_counter_get(NRF_RTC2);
            uint32_t cc = counter + ticks;
            NVIC_EnableIRQ(RTC2_IRQn);
            nrf_rtc_cc_set(NRF_RTC2, 0, cc);
            nrf_rtc_event_clear(NRF_RTC2, NRF_RTC_EVENT_COMPARE_0);
            nrf_rtc_int_enable(NRF_RTC2, NRF_RTC_INT_COMPARE0_MASK);
            nrf_rtc_event_enable(NRF_RTC2, RTC_EVTEN_COMPARE0_Msk);
            break; // Stop traversing the list.
        }
        source = source->next;
    }
}

static int enterHibernateMode(const hal_sleep_config_t* config, hal_wakeup_source_base_t** wakeupReason) {
#if HAL_PLATFORM_EXTERNAL_RTC
    auto source = config->wakeup_sources;
    while (source) {
        if (source->type == HAL_WAKEUP_SOURCE_TYPE_RTC) {
            auto rtcWakeup = reinterpret_cast<const hal_wakeup_source_rtc_t*>(source);
            auto seconds = rtcWakeup->ms / 1000;
            struct timeval tv = {
                .tv_sec = seconds,
                .tv_usec = 0
            };
            CHECK(hal_exrtc_set_alarm(&tv, HAL_RTC_ALARM_FLAG_IN, nullptr, nullptr, nullptr));
        }
        source = source->next;
    }
 #endif

    // Make sure we acquire exflash lock BEFORE going into a critical section
    hal_exflash_lock();

    // Disable thread scheduling
    os_thread_scheduling(false, nullptr);

    // Suspend USARTs
    for (int usart = 0; usart < HAL_PLATFORM_USART_NUM; usart++) {
        hal_usart_sleep(static_cast<hal_usart_interface_t>(usart), true, nullptr);
    }
    // Suspend SPIs
    for (int spi = 0; spi < HAL_PLATFORM_SPI_NUM; spi++) {
        hal_spi_sleep(static_cast<hal_spi_interface_t>(spi), true, nullptr);
    }
    // Suspend I2Cs
    for (int i2c = 0; i2c < HAL_PLATFORM_I2C_NUM; i2c++) {
        hal_i2c_sleep(static_cast<hal_i2c_interface_t>(i2c), true, nullptr);
    }
    // Suspend PWM modules
    hal_pwm_sleep(true, nullptr);
    // Suspend ADC module
    hal_adc_sleep(true, nullptr);

    // This will disable all but SoftDevice interrupts (by modifying NVIC->ICER)
    uint8_t st = 0;
    sd_nvic_critical_region_enter(&st);

    // Disable SysTick
    SysTick->CTRL &= ~SysTick_CTRL_ENABLE_Msk;

    // Put external flash into sleep mode and disable QSPI peripheral
    hal_exflash_sleep(true, nullptr);

    // Uninit GPIOTE
    nrfx_gpiote_uninit();

    // Disable low power comparator
    nrf_lpcomp_disable();

    // Deconfigure any possible SENSE configuration
    hal_interrupt_suspend();

    // Disable GPIOTE PORT interrupts
    nrf_gpiote_int_disable(GPIOTE_INTENSET_PORT_Msk);

    // Clear any GPIOTE events
    nrf_gpiote_event_clear(NRF_GPIOTE_EVENTS_PORT);

    disableRadioAntenna();

    auto wakeupSource = config->wakeup_sources;
    while (wakeupSource) {
        if (wakeupSource->type == HAL_WAKEUP_SOURCE_TYPE_GPIO) {
            hal_pin_info_t* halPinMap = hal_pin_map();
            auto gpioWakeup = reinterpret_cast<hal_wakeup_source_gpio_t*>(wakeupSource);
            nrf_gpio_pin_pull_t wakeupPinMode;
            nrf_gpio_pin_sense_t wakeupPinSense;
            switch(gpioWakeup->mode) {
                case RISING: {
                    wakeupPinMode = NRF_GPIO_PIN_PULLDOWN;
                    wakeupPinSense = NRF_GPIO_PIN_SENSE_HIGH;
                    break;
                }
                case FALLING: {
                    wakeupPinMode = NRF_GPIO_PIN_PULLUP;
                    wakeupPinSense = NRF_GPIO_PIN_SENSE_LOW;
                    break;
                }
                case CHANGE:
                default: {
                    wakeupPinMode = NRF_GPIO_PIN_NOPULL;
                    break;
                }
            }
            uint32_t nrfPin = NRF_GPIO_PIN_MAP(halPinMap[gpioWakeup->pin].gpio_port, halPinMap[gpioWakeup->pin].gpio_pin);
            // Set pin mode
            if (wakeupPinMode == NRF_GPIO_PIN_NOPULL) {
                nrf_gpio_cfg_input(nrfPin, wakeupPinMode);
                // Read current state, choose sense accordingly
                // Dummy read just in case
                (void)nrf_gpio_pin_read(nrfPin);
                uint32_t cur_state = nrf_gpio_pin_read(nrfPin);
                if (cur_state) {
                    nrf_gpio_cfg_sense_set(nrfPin, NRF_GPIO_PIN_SENSE_LOW);
                } else {
                    nrf_gpio_cfg_sense_set(nrfPin, NRF_GPIO_PIN_SENSE_HIGH);
                }
            } else {
                nrf_gpio_cfg_sense_input(nrfPin, wakeupPinMode, wakeupPinSense);
            }
        } else if (wakeupSource->type == HAL_WAKEUP_SOURCE_TYPE_LPCOMP) {
            configLpcompWakeupSource(wakeupSource);
        }
#if HAL_PLATFORM_EXTERNAL_RTC
        else if (wakeupSource->type == HAL_WAKEUP_SOURCE_TYPE_RTC) {
            hal_pin_info_t* halPinMap = hal_pin_map();
            uint32_t nrfPin = NRF_GPIO_PIN_MAP(halPinMap[RTC_INT].gpio_port, halPinMap[RTC_INT].gpio_pin);
            nrf_gpio_cfg_sense_input(nrfPin, NRF_GPIO_PIN_PULLUP, NRF_GPIO_PIN_SENSE_LOW);
        }
 #endif
        wakeupSource = wakeupSource->next;
    }

    // RAM retention is configured on early boot in Set_System()

    SPARK_ASSERT(sd_power_system_off() == NRF_SUCCESS);
    while (1);
    return SYSTEM_ERROR_NONE;
}
